# menu-extractor

./: .env.example  .gitignore  README.md  example_output_ronis.json  example_usage.py  pyproject.toml
scripts/: example_usage.py
src/menu_extractor/: __init__.py  exceptions.py  main.py  models.py  parsing.py  run.py
src/menu_extractor/chunker/: __init__.py  chunk.py
src/menu_extractor/extractor/: __init__.py  extraction.py
src/menu_extractor/extractor/prompts/: system.txt  user.txt
src/menu_extractor/llm/: __init__.py  client.py
src/menu_extractor/llm/prompts/: __init__.py  system.txt  user.txt
src/menu_extractor/pdf_converter/: __init__.py  converter.py
tests/data/: __init__.py  garden_gate_expected_menu.json
tests/e2e/: test_menu.py
tests/unit/: test_parsing.py
