[project]
name = "menu-extractor"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "cohere>=5.14.0",
    "loguru>=0.7.3",
    "pdfplumber>=0.11.5",
    "pydantic-settings>=2.8.1",
    "pydantic>=2.10.6",
    "doclayout-yolo>=0.0.3",
    "joblib>=1.4.2",
    "pdf2image>=1.17.0",
    "json5>=0.10.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
pythonpath = ["."]

[dependency-groups]
dev = [
    "pytest>=8.3.4",
    "rapidfuzz>=3.12.2",
]
